substrate/frame/support/test/tests/construct_runtime_ui/abundant_where_param.stderr
error: `Block` was declared above. Please use exactly one declaration for `Block`.
  --> tests/construct_runtime_ui/abundant_where_param.rs:24:3
   |
24 |         Block = Block1,
   |         ^^^^^
